# Forex-wws2277

./: .dockerignore  .gitignore  AGENTS.md  CALENDAR_2026.md  DEEP_WORK_PROTOCOL.md  Dockerfile  INSTRUCTIONS_FOR_OTHER_PLATFORMS.md  MACRO_TABLE.md  MERGE_CONFLICT_RESOLUTION.md  PLAYBOOK_FOREX28_2026.md  PLAYBOOK_PRO_INDICATORS.md  README.md  SESSION_STATE.md  STRENGTH_METHOD.md  TELEGRAM_AGENT.md  TELEGRAM_PROGRESS.md  aven_write_test.txt  fly.toml  pyproject.toml  requirements.txt  test-plan-pr11.md  test-plan.md  test-report-pr11.md  test-report.md
HISTORY/: 2026-05-01_audit-and-bugfixes.md  2026-05-01_daily-and-microstructure.md  2026-05-01_launch-and-restore-tunnel.md  2026-05-01_market-hours-and-preemptive-stability-forecast.md  2026-05-01_master-strategy-agent.md  2026-05-01_stability-engine-and-premium-ui.md  2026-05-01_stakan-launch.md  2026-05-01_system-self-audit-and-visual-unification.md  2026-05-02_continue-restore-tunnel.md  2026-05-02_devin_chat_context.md  2026-05-02_fly-permanent-deploy.md  2026-05-02_full-session-transcript.md  2026-05-02_fx-investment-intent-page.md  2026-05-02_http2-fix-and-tabs-test.md  2026-05-02_static-cdn-mirror.md  2026-05-03_28-final-signals-living-ux.md  2026-05-03_dst-fix-utc-plus-5.md  2026-05-03_real-time-market-fix.md  2026-05-03_restore-deploys.md  2026-05-03_wr_maximization.md  2026-05-04_backtest_365_real_wr.md  2026-05-04_bayesian-favorite-keepalive.md  2026-05-04_event_attribution_365d_pr16_pr17.md  2026-05-04_final-deploy.md  2026-05-04_institutional-verdict-stakan-only.md  2026-05-04_main-trades-section.md  2026-05-04_no-ozhidanie-min-70pct.md  2026-05-04_phase8_deeper_training.md  2026-05-04_phase9_deeper_conviction.md  2026-05-04_stakan-view-section.md  2026-05-04_three-section-reorg.md  2026-05-04_three-section-test-plan.md  2026-05-04_three-section-test-report.md  2026-05-04_unified-config-and-v500.md  2026-05-04_utc5-no-jump-trade-plan.md  2026-05-05_phase10_cell_anchor.md  2026-05-05_phase11_math_expectation.md  2026-05-05_phase12_24h_forecast.md  2026-05-05_phase13_deploy_to_fly.md  (+5 more)
app/: analyzer.py  auto_optimizer.py  (+25 more)
(+669 files in other folders)
