[project]
name = "forex-signals"
version = "1.0.0"
description = "Forex Signals - Real-time trading signals for 28 currency pairs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "yfinance>=0.2.40",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "slowapi>=0.1.9",
]

# Optional extras — install via `pip install -e .[memory]`. Kept out of
# the required `dependencies` list so the existing FastAPI app keeps
# installing in lean environments that don't need Supabase.
[project.optional-dependencies]
memory = ["supabase>=2.0.0"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"
